# adventofcode

./: .gitignore  pyproject.toml
2017/day01/: inverse_captcha.py
2017/day02/: corruption_checksum.py
2017/day03/: day03.md  spiral_memory.py
2017/day04/: day04.md
2017/day05/: twisty_trampolines.py
2017/day07/: day07.md  recursive_circus.py  test_recursive_circus.py
2017/day08/: day08.md  test_register_instructions.py
2017/day09/: day09.md  test_stream_processor.py
advent2017/day01/: test_inverse_captcha.py
advent2017/day02/: test_corruption_checksum.py
advent2017/day03/: test_spiral_memory.py
advent2017/day04/: high_entropy_passphrases.py  test_high_entropy_passphrases.py
advent2017/day05/: test_twisty_trampolines.py
advent2017/day06/: day06.md  memory_reallocation.py  test_memory_reallocation.py
advent2017/day07/: test_recursive_circus.py
advent2017/day08/: register_instructions.py  test_register_instructions.py
advent2017/day09/: test_stream_processor.py
day01/: inverse_captcha.py  test_inverse_captcha.py
day02/: day02.md  test_corruption_checksum.py
day03/: test_spiral_memory.py
day04/: test_high_entropy_passphrases.py
day05/: day05.md  test_twisty_trampolines.py
day06/: test_memory_reallocation.py
day09/: stream_processor.py
helpers/: read.py
y2021/day01/: depth_readings.md  depth_readings.py
y2021/day02/: pilot_this_thing.md  pilot_this_thing.py
y2021/day03/: binary_diagnostic.md  binary_diagnostic.py
y2021/day04/: bingo.md  bingo.py
y2021/day05/: hydrothermal_venture.md  hydrothermal_venture.py
(+31 files in other folders)
