[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Andy Herd"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
coverage = "^6.5.0"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
